[package]
name = "blob_royale_server"
version = "0.1.0"
edition = "2024"

[lints]
#workspace = true

[dependencies]
eframe = "0.31.1"
#eframe = { workspace = true, features = [
#    "default",
#    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
#] }
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }

