[package]
name = "blob_royale_server"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
#workspace = true


[dependencies]
eframe = "0.31.1"
egui = "0.31.1"

# For image support:
egui_extras = { version = "0.31.1", features = ["default", "image"] }

env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
